--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>worldskills</title>
 </head>
 <body>
-    <div class="head">
-        <h1>topic</h1>
-    </div>
-
+    <div class="box1"></div>
+    <div class="box2"></div>
     
 </body>
 </html>
