--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>worldskills</title>
 </head>
 <body>
-    <div class="box1"></div>
-    <div class="box2"></div>
-    
+    <div class="box1">
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
+    </div>
+
 </body>
 </html>
