--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="box1">
         <div class="box2">
-            <img src="https://sport.mthai.com/app/uploads/2016/12/Logo_thaileague.svg_-1024x504.png" alt="banner" height="100%" width="100%">
+            <div class="photo">
+                <img src="https://sport.mthai.com/app/uploads/2016/12/Logo_thaileague.svg_-1024x504.png" alt="banner" height="100%" width="100%">
+            </div>
         </div>
         <div class="box3"></div>
         <div class="box4"></div>
