--- a/template-gui/competition-create.html
+++ b/template-gui/competition-create.html
@@ -33,7 +33,7 @@
       <section class="form">
         <div class="row">
           <div class="col-md-4">
-            <form action="competition-create.php" method="POST" enctype="multipart/form-data">
+            <form action="competition-create.html" method="POST" enctype="multipart/form-data">
               <div class="col-12">
                 <div class="mb-3">
                   <label for="name">Competition Name</label>
